{{$NEXT}}

0.0.4  2018-10-02T21:01:41Z

    - Cleanup of powershell patcher script

0.0.3  2018-10-02T20:50:17Z

    - differentiate AssemblyVersion and AssemblyFileVersion  https://stackoverflow.com/a/65062/5147708

0.0.2  2018-06-14T19:27:08Z

    - Version-from support
    - Many fixes (mostly small bugs from previous version)

0.0.1  2018-06-14T17:24:18Z

    - First release
